--- a/chlen.css
+++ b/chlen.css
@@ -1,3 +1,9 @@
+
+
+/*slick zalupa*/
+@charset "UTF-8";
+@font-face { font-family: slick; src: url('node_modules/slick-1.8.1/slick/fonts/slick.eot?#iefix') format('embedded-opentype'), url('node_modules/slick-1.8.1/slick/fonts/slick.woff') format('woff'), url('node_modules/slick-1.8.1/slick/fonts/slick.ttf') format('truetype'), url('node_modules/slick-1.8.1/slick/fonts/slick.svg#slick') format('svg'); }
+
 /* Указываем box sizing */
 *,
 *::before,
@@ -29,12 +35,43 @@ dd {
     margin: 0;
 }
 
-.test {
-    width: 100%;
-    height: 100%;
+
+.Slider {
+    position: relative;
+    --content-left: 'testLeft';
+    --content-right: "testRight"
+}
+
+.some-test{
+    color: black;
 }
 
 img{
     width: 100%;
     height: 100%;
 }
+
+.test-content:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.45);
+}
+
+.img--background {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.slick-prev{
+
+}
+.slick-prev:before
+{
+    content: var(--content-left);
+}
+
