--- a/chlen.css
+++ b/chlen.css
@@ -35,11 +35,12 @@ dd {
     margin: 0;
 }
 
+.slider-container{
+
+}
 
 .Slider {
     position: relative;
-    --content-left: 'testLeft';
-    --content-right: "testRight"
 }
 
 .some-test{
@@ -49,9 +50,17 @@ dd {
 img{
     width: 100%;
     height: 100%;
+
 }
 
-.test-content:before {
+
+.black--mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.black--mask:before {
     content: '';
     position: absolute;
     top: 0;
@@ -61,17 +70,61 @@ img{
     background: rgba(0,0,0,.45);
 }
 
-.img--background {
+.donut--background{
+    z-index: 1000;
+}
+
+.donut--background img {
+    clip-path: circle(120px at 50% 50%);
     position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.slick-prev{
 
 }
-.slick-prev:before
-{
-    content: var(--content-left);
+.slide-name{
+    border-radius:50%;
+    background:rgba(0,0,0,0);
+    color:white;
+    width:100px;
+    height:100px;
+    text-align:center;
+    line-height:100px;
+
+    /*position: absolute;*/
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% -50%);
+}
+
+
+
+/*.slide-name {*/
+/*    top: 50%;*/
+/*    left: 50
+%;*/
+/*    text-transform: uppercase;*/
+/*    color: white;*/
+/*    z-index: 1000;*/
+/*    position: absolute;*/
+/*    transform: translateY(-100%);*/
+/*}*/
+
+.sl-arrow {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#next,
+#prev {
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 16px;
+    color: white;
+    text-transform: uppercase;
+    padding: 10px;
 }
 
