--- a/chlen.css
+++ b/chlen.css
@@ -42,19 +42,13 @@ dd {
 .Slider {
     position: relative;
 }
-
-.some-test{
-    color: black;
-}
-
-img{
+ img{
     width: 100%;
     height: 100%;
 
 }
 
-
-.black--mask {
+.black--mask{
     position: absolute;
     top: 0;
     left: 0;
@@ -70,29 +64,66 @@ img{
     background: rgba(0,0,0,.45);
 }
 
-.donut--background{
-    z-index: 1000;
+.donut{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-.donut--background img {
-    clip-path: circle(120px at 50% 50%);
+.donut img {
+    width: 380px;
+    height: 380px;
+
+    margin: 0 auto;
+
     position: absolute;
 
-}
-.slide-name{
-    border-radius:50%;
-    background:rgba(0,0,0,0);
-    color:white;
-    width:100px;
-    height:100px;
-    text-align:center;
-    line-height:100px;
 
-    /*position: absolute;*/
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% -50%);
+    /*align-self: center;*/
+    /*display: block;*/
+    /*margin-left: auto;*/
+    /*margin-right: auto*/
+
 }
+
+.donut span {
+    margin: 0 auto;
+    position: absolute;
+
+    text-transform: uppercase;
+    font-size: 28px;
+    line-height: 33px;
+    color: white;
+}
+
+/*.donut--background{*/
+/*    z-index: 1000;*/
+/*    position: relative;*/
+/*}*/
+
+/*.donut--background img {*/
+/*    clip-path: circle(120px at 50% 50%);*/
+
+/*}*/
+/*.slide-name{*/
+/*    border-radius:50%;*/
+/*    background:rgba(0,0,0,0);*/
+/*    color:white;*/
+/*    width:100px;*/
+/*    height:100px;*/
+/*    text-align:center;*/
+/*    line-height:100px;*/
+
+/*    position: absolute;*/
+
+/*}*/
 
 
 
