--- a/chlen.css
+++ b/chlen.css
@@ -1,21 +1,8 @@
 
-
 /*slick zalupa*/
 @charset "UTF-8";
-@font-face { font-family: slick; src: url('node_modules/slick-1.8.1/slick/fonts/slick.eot?#iefix') format('embedded-opentype'), url('node_modules/slick-1.8.1/slick/fonts/slick.woff') format('woff'), url('node_modules/slick-1.8.1/slick/fonts/slick.ttf') format('truetype'), url('node_modules/slick-1.8.1/slick/fonts/slick.svg#slick') format('svg'); }
+@font-face { font-family: slick; src: url('node_modules/slick-slider/slick/fonts/slick.eot') format('embedded-opentype'), url('node_modules/slick-slider/slick/fonts/slick.woff') format('woff'), url('node_modules/slick-slider/slick/fonts/slick.ttf') format('truetype'), url('node_modules/slick-slider/slick/fonts/slick.svg#slick') format('svg'); }
 
-/* Указываем box sizing */
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-/* Убираем внутренние отступы */
-ul[class],
-ol[class] {
-    padding: 0;
-}
 
 /* Убираем внешние отступы */
 body,
@@ -35,26 +22,18 @@ dd {
     margin: 0;
 }
 
-.slider-container{
 
-}
-
-.Slider {
+.slider-section {
     position: relative;
 }
 
-.some-test{
-    color: black;
-}
-
-img{
+ img{
     width: 100%;
     height: 100%;
 
 }
 
-
-.black--mask {
+.black--mask{
     position: absolute;
     top: 0;
     left: 0;
@@ -70,48 +49,44 @@ img{
     background: rgba(0,0,0,.45);
 }
 
-.donut--background{
-    z-index: 1000;
+.donut{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-.donut--background img {
-    clip-path: circle(120px at 50% 50%);
+.donut img {
+    width: 380px;
+    height: 380px;
+
+    margin: 0 auto;
     position: absolute;
 
 }
-.slide-name{
-    border-radius:50%;
-    background:rgba(0,0,0,0);
-    color:white;
-    width:100px;
-    height:100px;
-    text-align:center;
-    line-height:100px;
 
-    /*position: absolute;*/
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% -50%);
+.donut span {
+    margin: 0 auto;
+    position: absolute;
+
+    text-transform: uppercase;
+    font-size: 28px;
+    line-height: 33px;
+    color: white;
 }
-
-
-
-/*.slide-name {*/
-/*    top: 50%;*/
-/*    left: 50
-%;*/
-/*    text-transform: uppercase;*/
-/*    color: white;*/
-/*    z-index: 1000;*/
-/*    position: absolute;*/
-/*    transform: translateY(-100%);*/
-/*}*/
 
 .sl-arrow {
     width: 100%;
     position: absolute;
     top: 50%;
     z-index: 10;
+
     transform: translateY(-50%);
     display: flex;
     justify-content: space-between;
@@ -124,6 +99,7 @@ img{
     font-weight: 600;
     font-size: 16px;
     color: white;
+
     text-transform: uppercase;
     padding: 10px;
 }
